Modules added and packages added to pubspec. settings.json configured

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,11 +14,36 @@ dependencies:
 
   cupertino_icons: ^1.0.6
 
+  #Core Dependencies
+  kartal: ^4.0.4
+  dio_nexus: ^0.2.1
+  equatable: ^2.0.5
+  riverpod: ^2.5.1
+  json_annotation: ^4.9.0
+  envied: ^0.5.4+1
+
+  widgets:
+    path: module/widgets
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  very_good_analysis: ^5.1.0
+  build_runner: ^2.4.11
+  flutter_gen_runner: ^5.5.0+1
+  flutter_launcher_icons: ^0.13.1
 
-  flutter_lints: ^3.0.0
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
+  min_sdk_android: 21
+  remove_alpha_ios: true
+
+flutter_gen:
+  output: lib/product/generated/
+  integrations:
+    lottie: true
 
 flutter:
   uses-material-design: true
