--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   riverpod: ^2.5.1
   json_annotation: ^4.9.0
   envied: ^0.5.4+1
+  easy_localization: ^3.0.7
 
   widgets:
     path: module/widgets
@@ -48,8 +49,8 @@ flutter_gen:
 flutter:
   uses-material-design: true
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/translations/
   #   - images/a_dot_ham.jpeg
   # fonts:
   #   - family: Schyler
