code generation has done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,8 +24,6 @@ dependencies:
   riverpod: ^2.5.1
 
   # Config
-  envied: ^0.5.4+1
-  json_annotation: ^4.9.0
   easy_localization: ^3.0.7
 
   #Utility
@@ -37,15 +35,15 @@ dependencies:
 
   widgets:
     path: module/widgets
+    
+  gen:
+    path: module/gen
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   very_good_analysis: ^5.1.0
-  build_runner: ^2.4.11
-  flutter_gen_runner: ^5.5.0+1
   flutter_launcher_icons: ^0.13.1
-  envied_generator: ^0.5.4+1
 
   
 flutter_launcher_icons:
@@ -54,11 +52,6 @@ flutter_launcher_icons:
   image_path: "assets/icon/icon.png"
   min_sdk_android: 21
   remove_alpha_ios: true
-
-flutter_gen:
-  output: lib/product/generated/
-  integrations:
-    lottie: true
 
 flutter:
   uses-material-design: true
