--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,18 +20,20 @@ dependencies:
   # Network
   dio_nexus: ^0.2.1
 
-  #State
+  # State
   riverpod: ^2.5.1
 
   # Config
   easy_localization: ^3.0.7
 
-  #Utility
+  # Utility
   easy_logger: ^0.0.2
   logger: ^2.3.0
   kartal: ^4.0.4
   google_fonts: ^6.2.1
 
+  # Navigation
+  auto_route: ^8.2.0
 
   widgets:
     path: module/widgets
@@ -44,6 +46,8 @@ dev_dependencies:
     sdk: flutter
   very_good_analysis: ^5.1.0
   flutter_launcher_icons: ^0.13.1
+  auto_route_generator: ^8.0.0
+  build_runner: ^2.4.11
 
   
 flutter_launcher_icons:
