--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   auto_route_generator: ^8.0.0
   build_runner: ^2.4.11
+  device_preview: ^1.2.0
 
   
 flutter_launcher_icons:
