--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
     path: module/gen
   common:
     path: module/common
+  core:
+    path: module/core
 
 dev_dependencies:
   flutter_test:
