--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
     path: module/core
 
 dev_dependencies:
+  integration_test:
   flutter_test:
     sdk: flutter
   very_good_analysis: ^5.1.0
@@ -54,6 +55,9 @@ dev_dependencies:
   auto_route_generator: ^8.0.0
   build_runner: ^2.4.11
   device_preview: ^1.2.0
+  mockito: ^5.4.4
+  bloc_test: ^9.1.7
+  patrol: ^3.9.0
 
   
 flutter_launcher_icons:
