--- a/module/core/pubspec.yaml
+++ b/module/core/pubspec.yaml
@@ -11,9 +11,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-  hive: ^4.0.0-dev.2
-  isar_flutter_libs: ^4.0.0-dev.13
-  path_provider: ^2.1.0
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  shared_preferences: ^2.3.2
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
