--- a/module/widgets/pubspec.yaml
+++ b/module/widgets/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
     sdk: flutter
 
   responsive_framework: ^1.4.0  
+  keyboard_dismisser: ^3.0.0
+  fluttertoast: ^8.2.8
   
 
 dev_dependencies:
