--- a/module/common/pubspec.yaml
+++ b/module/common/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage: none
 
 environment:
-  sdk: '>=3.4.1 <4.0.0'
+  sdk: ^3.5.2
   flutter: ">=1.17.0"
 
 dependencies:
@@ -12,12 +12,12 @@ dependencies:
     sdk: flutter
 
   #network
-  cached_network_image: ^3.3.1
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^5.1.0
+  very_good_analysis: ^6.0.0
 
 flutter:
 
