--- a/module/core/pubspec.yaml
+++ b/module/core/pubspec.yaml
@@ -4,7 +4,7 @@ version: 0.0.1
 homepage: none
 
 environment:
-  sdk: '>=3.4.1 <4.0.0'
+  sdk: ^3.5.2
   flutter: ">=1.17.0"
 
 dependencies:
@@ -19,7 +19,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^5.1.0
+  very_good_analysis: ^6.0.0
 
 flutter:
 
