--- a/module/widgets/pubspec.yaml
+++ b/module/widgets/pubspec.yaml
@@ -4,14 +4,14 @@ version: 0.0.1
 homepage: "none"
 
 environment:
-  sdk: '>=3.4.1 <4.0.0'
+  sdk: ^3.5.2
   flutter: ">=1.17.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  responsive_framework: ^1.4.0  
+  responsive_framework: ^1.5.1  
   keyboard_dismisser: ^3.0.0
   fluttertoast: ^8.2.8
   
@@ -19,7 +19,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  very_good_analysis: ^5.1.0
+  very_good_analysis: ^6.0.0
 
 flutter:
 
